<resources>
    <string name="app_name">Winnebago Control</string>
    <string name="app_label">Winnebago</string>
    <string name="discover">Discover</string>
    <string name="protocol_http">http://</string>
    <string name="protocol_ssl">https://</string>
    <string name="stored_ip_address">storedIpAddress</string>
    <string name="route_admin">admin</string>
    <string name="route_network">network</string>
    <string name="text_view_dialog_enter_ip_address">Enter IP Address</string>
    <string name="button_dialog_enter_ip_address_accept">Accept</string>
    <string name="button_dialog_enter_ip_address_cancel">Cancel</string>
    <string name="ip_address_not_local">The selected IP address must be on the local network!</string>
    <string name="menu_text_main_page">Home Screen</string>
    <string name="menu_text_scan_network">Connect to Coach</string>
    <string name="menu_text_enter_ip_address">Connect Manually</string>
    <string name="menu_text_admin_page">Advanced Settings</string>
    <string name="menu_text_network_page">Connection Settings</string>
    <string name="menu_text_cloud_options">Cloud Options</string>
    <string name="menu_text_cloud_page">Cloud Login</string>
    <string name="menu_text_clear_preferences">Clear Preferences</string>
    <string name="menu_text_clear_cache">Clear Cache</string>
    <string name="button_dialog_cloud_options_done">Done</string>
    <string name="text_view_dialog_cloud_options_title">Winnebago Cloud</string>
    <string name="button_dialog_cloud_options_enable">Enable</string>
    <string name="button_dialog_cloud_options_disable">Disable</string>
    <string name="preference_cloud_enabled">preferenceCloudEnabled</string>
<!--    <string name="url_cloud">https://testmyrozie.com</string>-->
    <string name="url_cloud">https://roziecoreservices.com</string>
    <string name="button_dialog_wifi_not_connected_exit_app">Exit</string>
    <string name="button_dialog_wifi_not_connected_go_to_cloud_site">Cloud</string>
    <string name="text_view_dialog_wifi_not_connected_error">No Wifi Connection</string>
    <string name="text_view_dialog_wifi_not_connected_message">For Winnebago Control to function properly, it requires a wifi network connection or cellular connection. Please connect your device to a wifi/cellular network.</string>
    <string name="text_view_dialog_network_scan_in_progress_title">Network Scan</string>
    <string name="text_view_dialog_network_scan_in_progress_message">Scanning Network</string>
    <string name="button_dialog_lr_not_found_cancel">Cancel</string>
    <string name="button_dialog_lr_not_found_rescan">Rescan</string>
    <string name="text_view_dialog_lr_not_found_error_text">Unable to connect to the LR125</string>
    <string name="text_view_dialog_lr_not_found_option_text">Rescan for the LR125?</string>
    <string name="text_view_dialog_cellular_detected">Cellular Connection Detected</string>
    <string name="button_dialog_cellular_detected_connect">Connect</string>
    <string name="button_dialog_lr_not_found_go_to_cloud">Connect to Cloud</string>
</resources>