<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewDialogEnterIPAddressTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/text_view_dialog_enter_ip_address"/>

    <TextView
        android:id="@+id/textViewDialogEnterIPAddressError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDialogEnterIPAddressTitle"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/editTextDialogEnterIPAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:digits="01234567890."
        android:inputType="number"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonDialogEnterIPAddressAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_dialog_enter_ip_address_accept" />

    <Button
        android:id="@+id/buttonDialogEnterIPAddressCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_dialog_enter_ip_address_cancel" />

</RelativeLayout>